--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,8 @@
+<% if @event.women_only? %>
+  <div class="bg-danger text-center p-2 text-white rounded mb-3">
+    女性限定
+  </div>
+<% end %>
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-8">
@@ -93,12 +98,14 @@
                               data: { confirm: 'キャンセルします' }
                   %>
                 <% else %>
+                <% if !@event.women_only? || (user_signed_in? && current_user.woman?) %>
                   <%= link_to 'このもくもく会に参加する',
                               event_attendance_url(@event),
                               class: 'btn btn-primary',
                               method: :post,
                               data: { confirm: '申し込みます' }
                   %>
+                <% end %>
                 <% end %>
               <% end %>
             <% end %>
